@@ -1,3 +1,11 @@
+Mon May 23 00:35:00 2001  Kenta Murata  <mrkn@mrkn.jp>
+
+	* bignum.c (dump_bignum, bigmul1_balance, big_split, biglsh_bang,
+	  bigrsh_bang, big_split3, bigmul1_toom3, bigmul0): implement Toom3 (Toom-Cook)
+	  multiplication.
+
+	* include/ruby/defines.h: add format prefixes for BDIGIT and BDIGIT_DBL.
+
 Sun May 22 23:24:02 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>
 
 	* ext/openssl/ossl_asn1.c: Instead of rb_intern use static symbols to
